// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pill with border 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "#40B66B",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      },
      Object {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    Icon
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "width": 8,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#0D111C",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 14,
          "lineHeight": 20,
        },
        Object {
          "color": undefined,
        },
      ]
    }
  >
    My Second Pill Label
  </Text>
</View>
`;

exports[`renders a Pill without image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      },
      Object {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#0D111C",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 14,
          "lineHeight": 20,
        },
        Object {
          "color": "accentActive",
        },
      ]
    }
  >
    My Pill Label
  </Text>
</View>
`;
